--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,16 +4,20 @@
 #
 defaults: &defaults
   docker:
-    - image: circleci/openjdk:8-jdk
+    - image: circleci/openjdk:11-jdk
 
   environment:
     MAVEN_OPTS: -Xmx3200m
 
-
-version: 2
+version: 2.1
 jobs:
   test_and_package:
     <<: *defaults
+
+    parameters:
+      mainline-build:
+        type: boolean
+        default: false
 
     steps:
       - checkout
@@ -42,11 +46,21 @@ jobs:
           key: yarn-dependencies-{{ checksum "src/main/app/yarn.lock" }}
 
       # includes package goal
-      - run: >
-          mvn
-          -s settings.xml
-          integration-test
-          jib:build
+      - when:
+          condition: <<mainline-build>>
+          steps:
+            - run: >
+                mvn
+                -s settings.xml
+                integration-test
+                jib:build
+      - unless:
+          condition: <<mainline-build>>
+          steps:
+            - run: >
+                mvn
+                -s settings.xml
+                verify
 
       - run: |
           mkdir -p /tmp/jars
@@ -83,4 +97,8 @@ workflows:
   version: 2
   test_and_package:
     jobs:
-      - test_and_package
+      - mainline:
+          filters:
+            branches:
+              only: master
+          mainline-build: true
