ci: fix circleci job reference

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ workflows:
   version: 2
   test_and_package:
     jobs:
-      - mainline:
+      - test_and_package:
           filters:
             branches:
               only: master
