--- a/src/main/compositions/dev/docker-compose.yml
+++ b/src/main/compositions/dev/docker-compose.yml
@@ -1,12 +1,15 @@
 version: '3.4'
 
 services:
-  mongodb:
+  mongo:
     image: mongo:4.1.4
     volumes:
       - mongodb_data:/data/db
     ports:
       - 27017:27017
-
+  mongoexpress:
+    image: mongo-express
+    ports:
+      - 8081:8081
 volumes:
   mongodb_data:
