--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,8 @@ logging:
     protocol: TCP
     service: kidsbank
   level:
-    org.springframework.web.servlet.DispatcherServlet: debug
+    org.springframework.web.servlet.DispatcherServlet: info
+    me.itzg.kidsbank: ${kidsbank.log-level:-info}
 management:
   metrics:
     export:
