misc: upgraded to Spring Boot 2.5.6

--- a/src/main/compositions/dev/docker-compose.yml
+++ b/src/main/compositions/dev/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - 27017:27017
   mongoexpress:
     image: mongo-express
+    depends_on:
+      - mongo
     ports:
       - 8081:8081
 volumes:
