ci: switched to Dockerfile style build

--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
     </repositories>
 
     <build>
-        <finalName>${artifactId}</finalName>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
