--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Prepare release
         run: |
-          git config --local user.name "Github Actions"
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           ./mvnw -B release:prepare -DreleaseVersion=${{ github.event.inputs.release }}
+          git push --tags
